# angara

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
angara-ls/includes/: AstNodeFinder.h  DocumentManager.h  LanguageServerState.h  Logger.h  LspDiagnostic.h  LspErrorHandler.h  VirtualCompilerDriver.h
angara-ls/src/: AstNodeFinder.cpp  DocumentManager.cpp  LanguageServerState.cpp  Logger.cpp  LspErrorHandler.cpp  VirtualCompilerDriver.h.cpp  main.cpp
angc/analyzer/table/: SymbolTable.cpp
angc/analyzer/type_checker/: TypeChecker.cpp
angc/analyzer/type_checker/expr/: AssignExpr.cpp  BinaryExpr.cpp  CallExpr.cpp  GetExpr.cpp  GroupingExpr.cpp  IsExpr.cpp  ListExpr.cpp  LiteralExpr.cpp  LogicalExpr.cpp  MatchExpr.cpp  RecordExpr.cpp  RetypeExpr.cpp  SizeOfExpr.cpp  SubscriptExpr.cpp  SuperExpr.cpp  TernaryExpr.cpp  ThisExpr.cpp  UnaryExpr.cpp  UpdateExpr.cpp  VarExpr.cpp
angc/analyzer/type_checker/stmt/: AttachStmt.cpp  BlockStmt.cpp  BreakStmt.cpp  ClassStmt.cpp  ContractStmt.cpp  DataStmt.cpp  EmptyStmt.cpp  EnumStmt.cpp  ExpressionStmt.cpp  ForInStmt.cpp  ForStmt.cpp  ForeignHeaderStmt.cpp  FuncStmt.cpp  IfStmt.cpp  ReturnStmt.cpp  ThrowStmt.cpp  TraitStmt.cpp  TryStmt.cpp  VarDeclStmt.cpp  WhileStmt.cpp
angc/backend/driver/: CompilerDriver.cpp
angc/backend/transpiler/: CTranspiler.cpp  Helpers.cpp
angc/backend/transpiler/expr/: AssignExpr.cpp  BinaryExpr.cpp  BlockExpr.cpp  CallExpr.cpp  GetExpr.cpp  GropuingExpr.cpp  IsExpr.cpp  ListExpr.cpp  LiteralExpr.cpp  LogicalExpr.cpp  MatchExpr.cpp  RecordExpr.cpp  RetypeExpr.cpp  SizeOfExpr.cpp  SubscriptExpr.cpp  SuperExpr.cpp  TernaryExpr.cpp  ThisExpr.cpp  UnaryExpr.cpp  UpdateExpr.cpp  VarExpr.cpp  dispatcher.cpp
angc/backend/transpiler/generators/: Class.cpp  Data.cpp  Declarations.cpp  Enum.cpp  FunctionSign.cpp  GenerateMain.cpp  GlobalFunction.cpp  GlobalsImpls.cpp  Method.cpp  Struct.cpp
angc/backend/transpiler/stmt/: BreakStmt.cpp  ExpressionStmt.cpp  ForInStmt.cpp  ForStmt.cpp  IfStmt.cpp  ReturnStmt.cpp  ThrowStmt.cpp  TryStmt.cpp  VarDeclStmt.cpp  WhileStmt.cpp  dispatcher.cpp
angc/frontend/lexer/: Lexer.cpp  Token.cpp
angc/frontend/parser/: Parser.cpp
angc/frontend/parser/declaration/: classDeclaration.cpp  contractDeclaration.cpp  dataDeclaration.cpp  dispatcher.cpp  enumDeclaration.cpp  traitDeclaration.cpp
angc/frontend/parser/expr/: assignmentExpression.cpp  callExpression.cpp  comparisonExpression.cpp  equalityExpression.cpp  factorExpression.cpp  logicalExpression.cpp  matchExpression.cpp  primaryExpression.cpp  termExpression.cpp  ternaryExpression.cpp  unaryExpression.cpp
angc/frontend/parser/stmt/: attachStatement.cpp  blockStatement.cpp  breakStatment.cpp  forStatement.cpp  functionStatement.cpp  ifStatement.cpp  returnStatement.cpp  throwStatement.cpp  tryStatement.cpp  varDeclStatement.cpp  whileStatement.cpp
angc/includes/: AccessLevel.h  CTranspiler.h  CompilerDriver.h  ErrorHandler.h  Expr.h  Lexer.h  Parser.h  Stmt.h  StringUtils.h  SymbolTable.h  Token.h  Type.h  TypeChecker.h
angc/shared/: ErrorHandler.cpp  StringUtils.cpp
angc/src/: main.cpp
include/: ASTPrinter.h  ASTTypes.h  AngaraABI.h  AngaraClass.h  AngaraClosure.h  AngaraFunction.h  AngaraInstance.h  AngaraObject.h  AngaraRuntime.h  AngaraTrait.h  CTranspiler.h  CompilerDriver.h  ErrorHandler.h  Expr.h  LLVMCodeGenerator.h  Lexer.h  Parser.h  Stmt.h  SymbolTable.h  Token.h  Type.h  TypeChecker.h  Value.h
modules/: adv_string.c  amqp.c  container.c  counter.c  fs.c  http.c  io.c  json.c  json_bridge.cpp  json_bridge.h  path.c  tar.c  time.c  websocket.c
runtime/: angara_runtime.c  angara_runtime.h
src/: ASTPrinter.cpp  AngaraClass.cpp  AngaraClosure.cpp  AngaraInstance.cpp  AngaraTrait.cpp  CTranspiler.cpp  CompilerDriver.cpp  ErrorHandler.cpp  LLVMCodeGenerator.cpp  Lexer.cpp  Parser.cpp  SymbolTable.cpp  Token.cpp  TypeChecker.cpp  Value.cpp  main.cpp
src/modules/: fs.c
src/runtime/: angara_runtime.c  angara_runtime.h
tests/: amqp_test.an  angara_fib.an  any_is.an  archive_test.an  attach_macos.an  contracts.an  contracts_showcase.an  data.txt  data_classes.an  dummy.an  dynamic_records.an  echo_server.an  enums.an  ffi.an  http_native.an  http_native_post.an  inheritance.an  init-lumina.sh  io_native.an  json.an  leven.an  lists.an  local_json.an  loop_angara.an  loop_native.c  lumina.an  matching.an  native_fib.c  native_test.an  nil_optionals.an  path_native.an  records.an  refined_contracts.an  separated_time.an  suggestions.an  test_counter.an  test_local_module.an  test_messages.txt  test_native_json.an  test_websocket.an  (+1 more)
